2004-12-20  Carl Worth  <cworth@cworth.org>

	* src/cairo_image_surface.c
	(_cairo_image_abstract_surface_create_pattern): Change return
	value from cairo_status_t to cairo_int_status_t to match
	definition in cairo_surface_backend_t.

	* BUGS: Add bug about gcc 3.4 warning: '__visibility__' attribute
	ignored on non-class types.

	* src/cairoint.h: Remove __internal_linkage macro from all
	functions returning pointers to shut up warning from gcc 3.4.

2004-12-17  Carl Worth  <cworth@cworth.org>

	* test/cairo_test.c (cairo_test): Fix to find reference images in
	local directory when run directly, (rather than by "make check").

	* BUGS: Add bug about invalidating font caches.

2004-12-02  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_gstate.c (_cairo_gstate_clip): Revert the "return early"
	change so that rectangular clipping works with backends that
	don't support clipping regions.

2004-11-29  Carl Worth  <cworth@cworth.org>

	* COPYING: Fix typo: LPGL->LGPL.

	* src/cairo_ps_surface.c (cairo_ps_surface_create): Remove
	unintentional copyright statement from user-generated output
	image.

2004-11-23  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am (XFAIL_TESTS): Note that text_cache_crash is
	expected to fail.

	* test/text_cache_crash.c (draw): Add test to demonstrate bug when
	item is too big for cache.

	* src/cairo_cache.c (_cache_sane_state): Really remove that
	refcount assertion this time.

	* test/text_cache_crash.c: Add note that bug has been fixed.
	(main): Instrumentation code for testing cache destruction.

	* test/cairo_test.c (cairo_test): Support tests that produce no
	output, (don't check image if (width,height) == (0,0)).

	* src/cairoint.h: Add #include <assert.h> here rather than in
	multiple .c files.

	* src/cairo_cache.c: Add const qualifier to static
	cache_arrangements table.
	(_cache_sane_state): Remove refcount assertion as it it false
	during the cairo_cache_destroy.